--- a/res/xml/user_interface_settings.xml
+++ b/res/xml/user_interface_settings.xml
@@ -28,7 +28,10 @@
             android:entries="@array/volume_key_cursor_control_entries"
             android:entryValues="@array/volume_key_cursor_control_values" />
 
-     
+       <CheckBoxPreference
+            android:key="recent_kill_all"
+            android:title="@string/recent_kill_all"
+		    android:summary="@string/recent_kill_all_summary" />
 
         <CheckBoxPreference
             android:key="status_bar_ime_switcher"
